--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <hr>
    <nav>
 	<ul>
-	<li> <a href="index.html">One Piece</a> </li>
+	<li> <a href="/">One Piece</a> </li>
 	<li> <a href="personagens.html">Chapéus de palha</a> </li>
 	<li> <a href="Shichibukai.html">Shichibukai</a> </li>
 	<li> <a href="Yonkou.html">Yonkou</a> </li>
@@ -40,5 +40,6 @@
   <p>A série foca em Monkey D. Luffy, um jovem que se tornou usuário de Akuma no Mi, frutas especiais que dão determinados tipos de poderes para quem as ingerir, acidentalmente quando era criança. Ele comeu a Akuma no Mi conhecida como Gomu Gomu no Mi, ou Fruta da Borracha, que estava sob posse da tripulação do poderoso pirata Shanks, o Ruivo, o ídolo de infância de Luffy.Ao completar 17 anos, Luffy parte em uma jornada do mar do East Blue para encontrar um tesouro lendário, o One Piece, pois seu grande sonho de vida é proclamar-se o Rei dos Piratas.Em um esforço para organizar sua própria tripulação, os Piratas do Chapéu de Palha, Luffy resgata e faz amizade com um caçador de piratas e espadachim chamado Roronoa Zoro, e eles partem em busca do tesouro titular.Eles são acompanhados em sua jornada por Nami, uma ladra e navegadora obcecada por dinheiro; Usopp, um franco-atirador e mentiroso compulsivo; e Sanji, um cozinheiro amoroso mas cavalheiresco. Eles adquirem um navio, o Going Merry, e se envolvem em confrontos com notórios piratas do East Blue. Enquanto Luffy e sua equipe partem em suas aventuras, outros se juntam à equipe mais tarde na série, incluindo Tony Tony Chopper, um médico de renas antropomorfizado; Nico Robin, arqueóloga e ex-assassina da Baroque Works; Franky, um construtor naval ciborgue; Brook, um músico esqueleto e espadachim; e Jimbei, um timoneiro homem-peixe e ex-membro dos Sete Corsários do Mar.Uma vez que o Going Merry está danificado além do reparo, Franky constrói um novo navio para os Piratas do Chapéu de Palha, o Thousand Sunny. Juntos, eles encontram outros piratas, caçadores de recompensas, organizações criminosas, revolucionários, agentes secretos e soldados do corrupto Governo Mundial, e vários outros amigos e inimigos, enquanto navegam pelos mares em busca de seus sonhos.
 </body>
 </html>
+
 
 
