--- a/Shichibukai.html
+++ b/Shichibukai.html
@@ -10,7 +10,7 @@
     <hr>
 	<nav>
 	<ul>
-	<li> <a href="inicio.html">One Piece</a> </li>
+	<li> <a href="index.html">One Piece</a> </li>
 	<li> <a href="personagens.html">Chapéus de palha</a> </li>
 	<li> <a href="Shichibukai.html">Shichibukai</a> </li>
 	<li> <a href="Yonkou.html">Yonkou</a> </li>
@@ -24,6 +24,7 @@
 	<img src="Shichibukai 3.jfif" width="400" height="268">
 	</div>
 	<p>Os Shichibukai,eram sete poderosos e notórios piratas que se aliaram ao Governo Mundial.Como um grupo,eles foram um dos Três Grandes Poderes que mantiveram o equilíbrio do mundo.No entanto,após o Levely mais recente,os países membros do Governo Mundial votaram pela dissolução da organização,resultando nos cinco membros restantes se tornando piratas e inimigos do Governo Mundial mais uma vez.
+
 	<hr>
 	<h2>Dracule Mihawk</h2>
 	<p>Dracule Mihawk,vulgo Olhos de Gavião é um pirata mundialmente famoso que detém o título de "Espadachim Mais Forte do Mundo".Ele é um dos fundadores da Cross Guild,e foi anteriormente um dos Shichibukai (sendo o primeiro revelado e formalmente apresentado) até a dissolução do grupo.No passado,Mihawk era conhecido como "Caçador de Marinheiros" e tinha a reputação de ser o rival de Shanks,um dos Quatro Imperadores.Seu local de residência era a Ilha Kuraigana,onde ele serviu durante o timeskip de dois anos como mestre de Roronoa Zoro em seu treinamento de espadas.Ao lado de seu ex-colega Shichibukai,Crocodile,Mihawk criou uma organização conhecida como Cross Guild,com Buggy,um dos Quatro Imperadores,atuando como líder da organização.Vegapunk também clonou Mihawk como um dos Seraphim,S-Hawk,para substituir os Shichibukai.Devido ao seu status e título,Mihawk é visto por Zoro como o maior obstáculo para realizar seu sonho de se tornar o espadachim mais forte do mundo.Mihawk pode ser considerado um antagonista coadjuvante do Arco Baratie e um dos principais antagonistas do Arco Marineford,onde participou da Batalha de Marineford ao lado da Marinha,junto com a maioria dos outros Shichibukai.
