--- a/Marinheiros.html
+++ b/Marinheiros.html
@@ -10,7 +10,7 @@
 	<hr>
 	<nav>
 	<ul>
-	<li> <a href="inicio.html">One Piece</a> </li>
+	<li> <a href="index.html">One Piece</a> </li>
 	<li> <a href="personagens.html">Chapéus de palha</a> </li>
 	<li> <a href="Shichibukai.html">Shichibukai</a> </li>
 	<li> <a href="Yonkou.html">Yonkou</a> </li>
@@ -56,6 +56,7 @@
     <br>
     <h2>Z</h2>
 	<img src="Z.jfif" width="410" height="368">
+
     <p>Z, também conhecido por seu nome de nascimento e antigo epíteto Zephyr dos "Punhos Pretos", foi o Comandante Supremo da Neo Marinha, além de ex-Almirante e instrutor da Marinha antes de sua renúncia.Ele atuou como o principal antagonista de One Piece Filme:Z, onde ele e suas forças entraram em confronto com os Piratas do Chapéu de Palha, pegos no meio de seu plano de Grande Imbuto para destruir o Novo Mundo; no qual ele foi derrotado lutando contra o capitão Monkey D. Luffy após várias batalhas. Z acabaria se sacrificando para proteger seus subordinados restantes e os Chapéus de Palha de seus ex-alunos da Marinha; até seu último suspiro.
 </body>
 </html>
