--- a/personagens.html
+++ b/personagens.html
@@ -12,7 +12,7 @@
 	<hr>
 	<nav>
 	<ul>
-	<li> <a href="inicio.html">One Piece</a> </li>
+	<li> <a href="index.html">One Piece</a> </li>
 	<li> <a href="personagens.html">Chapéus de palha</a> </li>
 	<li> <a href="Shichibukai.html">Shichibukai</a> </li>
 	<li> <a href="Yonkou.html">Yonkou</a> </li>
@@ -31,6 +31,7 @@
 	<h2>Chapéus de Palha</h2>
 	</header>
 	<p>Os Piratas do Chapéu de Palha,também conhecidos como a Tripulação do Chapéu de Palha ou simplesmente Chapéus de Palha,são uma tripulação pirata extremamente infame e poderosa,originária do East Blue.Os "Chapéus de Palha" receberam esse nome em homenagem ao chapéu característico de Luffy,que lhe foi dado por Shanks,"o Ruivo",e foram chamados pela primeira vez de Piratas do Chapéu de Palha por Smoker no Reino de Alabasta.A tripulação navegou no Going Merry,o primeiro navio oficial dos Chapéus de Palha,até o Arco Water 7.Durante o Arco Pós-Enies Lobby,Franky e Iceburg construíram um novo navio para eles,que foi batizado de Thousand Sunny por Iceburg,embora os membros tenham brigado por nomes diferentes.Após os eventos no Arquipélago de Sabaody, todos os membros foram separados uns dos outros por Bartholomew Kuma,um então Shichibukai e agente secreto do Exército Revolucionário.Durante dois anos,eles treinaram em locais relativamente isolados,tornando-se mais fortes para se ajudarem mutuamente.Depois disso,eles se reuniram e,desde então,continuaram a ser uma força dinâmica no Novo Mundo,perturbando bastante o equilíbrio dos Três Grandes Poderes.Após o ataque a Onigashima,com as derrotas de Kaidou e Big Mom,seu capitão se tornou oficialmente um dos novos Quatro Imperadores.Eles são o principal foco e protagonistas do mangá e anime One Piece,e são liderados pelo protagonista principal,Monkey D.Luffy.
+
 	<hr>
 	<table>
 	  <tr>
