--- a/Yonkou.html
+++ b/Yonkou.html
@@ -10,7 +10,7 @@
 	<hr>
    <nav>
 	<ul>
-	<li> <a href="inicio.html">One Piece</a> </li>
+	<li> <a href="index.html">One Piece</a> </li>
 	<li> <a href="personagens.html">Chapéus de palha</a> </li>
 	<li> <a href="Shichibukai.html">Shichibukai</a> </li>
 	<li> <a href="Yonkou.html">Yonkou</a> </li>
@@ -43,6 +43,7 @@
 	<img src="barba negra.webp" width="510" height="368">
 	<p>Marshall D. Teach, mais conhecido como Barba Negra foi o último personagem a se tornar um Yonkou atualmente no anime. Durante toda a jornada de One Piece é possível ver sua ascensão, começando quando ele era um dos piratas do Barba Branca e foge do bando após assassinar um companheiro para ter acesso a Yami Yami no Mi.Depois da fuga, ele foi responsável por entregar Ace para a Marinha, o que lhe rendeu a posição de Shichibukai, da qual ele usou para invadir Impel Down, a prisão impenetrável. Lá o vilão reuniu um grande números de piratas formidáveis, como Shiryu, que estava preso na sexta camada da prisão e Catarina Devon, além de outros que já faziam parte de seu grupo, como o sniper Van Augar que tem a Akuma no Mi do teleporte e Doc Q que utiliza os poderes da fruta da doença.Após sair de Impel Down renunciando o título de Shichibukai, Teach foi em direção a Marineford, onde junto de seu bando terminou de matar Barba Branca e então de alguma forma roubou sua Akuma no Mi. Isso fez com que ele se tornasse um Yonkou e inimigo direto de muitas pessoas, como Luffy, a Marinha e o Governo Mundial e os remanescentes dos piratas de Edward Newgate.Barba Negra é um dos personagens mais poderosos de One Piece, principalmente por ser o único que tem o poder de duas Akuma no Mi, o que por muito tempo foi considerado impossível. A primeira é a Yami Yami no Mi, o fruto das trevas, que permite que ele controle e crie o elemento. Seu corpo é formado por trevas, o que permite que ele tenha um espaço infinito, mas também dobra o dano que ele recebe.As trevas tem uma grande propriedade de gravidade e absorção, criando algo como um buraco negro. Seu outro poder atualmente é a Gura Gura no Mi, a fruta do terremoto. Com ela Teach pode criar grandes ondas de choque capazes de até mesmo quebrar o ar no processo e inicialmente ele não tinha tanto controle sobre as novas habilidades. Sua recompensa é de 2,247,600,000 Berries.
 	<br>
+
 	<h2></h2>
 </body>
 </html>
