--- a/Marinheiros.html
+++ b/Marinheiros.html
@@ -43,7 +43,7 @@
     <p>Aramaki, mais conhecido por seu pseudônimo Ryokugyu, é um Almirante da Marinha. Ele foi foi nomeado durante o timeskip de dois anos, ao lado de Fujitora, para preencher as duas vagas de Almirante causadas pela renúncia de Kuzan e pela promoção de Sakazuki.Ryokugyu foi mencionado pela primeira vez por Donquixote Doflamingo no Arco Dressrosa, e estreou no Arco Levely. Sua aparência completa e seu nome verdadeiro foram revelados perto do final do Arco País de Wano, no qual ele atua como antagonista secundário.
     <br>
     <h2>Kuzan</h2>
-	<img src="kuzan.jfif" width="410" height="368">
+	<img src="Kuzan.jfif" width="410" height="368">
     <p>Kuzan,mais conhecido por seu antigo pseudônimo Aokiji, é um dos Dez Capitães Colossais dos Piratas do Barba Negra, como o capitão do Décimo Navio.Antes de se juntar à tripulação do Barba Negra, ele serviu como um Almirante na Marinha,tendo sido ensinado por Monkey D. Garp.Ele foi nomeado por Sengoku para o cargo de Almirante de Frota;no entanto, depois de lutar contra Sakazuki pela posição e perder, Kuzan renunciou à Marinha.Kuzan é um antagonista menor do Arco Long Ring Long Land (no anime, um dos principais antagonistas do Arco Retorno de Foxy), um dos dois antagonistas secundários do Arco Marineford (junto com Borsalino), um antagonista coadjuvante no Arco Egghead e um grande antagonista da Saga Final junto com o resto dos Piratas do Barba Negra.
     <br>
     <h2>Sakazuki</h2>
@@ -60,3 +60,4 @@
     <p>Z, também conhecido por seu nome de nascimento e antigo epíteto Zephyr dos "Punhos Pretos", foi o Comandante Supremo da Neo Marinha, além de ex-Almirante e instrutor da Marinha antes de sua renúncia.Ele atuou como o principal antagonista de One Piece Filme:Z, onde ele e suas forças entraram em confronto com os Piratas do Chapéu de Palha, pegos no meio de seu plano de Grande Imbuto para destruir o Novo Mundo; no qual ele foi derrotado lutando contra o capitão Monkey D. Luffy após várias batalhas. Z acabaria se sacrificando para proteger seus subordinados restantes e os Chapéus de Palha de seus ex-alunos da Marinha; até seu último suspiro.
 </body>
 </html>
+
